# mcp-server-things

./: CHANGELOG.md  heading-fix.patch  pyproject.toml
.github/workflows/: publish.yml
src/things_mcp/: __init__.py  main.py  move_operations.py  pure_applescript_scheduler.py  server.py  tools.py
src/things_mcp/scheduling/: heading_operations.py  todo_operations.py
src/things_mcp/tools_helpers/: helpers.py  read_operations.py  write_operations.py
tests/unit/: test_area_management.py  test_heading_management.py
